<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--Detail of each asteroid-->
    <data>
        <!-- The variable here is directly bound from view model of Detail Fragment-->
        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.domain.Asteroid" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/activity_main_image_of_the_day"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
            app:hazardousDescription="@{asteroid.potentiallyHazardous}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/asteroid_safe" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_image_of_the_day">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@{String.format(@string/close_approach_date_content_description_format, asteroid.closeApproachDate)}"
                        android:text="@{asteroid.closeApproachDate}"
                        android:textColor="@color/default_text_color"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@{String.format(@string/absolute_magnitude_title_description, asteroid.absoluteMagnitude)}"
                            android:textColor="@color/default_text_color"
                            app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/absolute_magnitude_help_button_description"
                        android:padding="@dimen/margin_normal"
                        app:srcCompat="@drawable/ic_help_circle" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/estimated_diameter_title"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@{String.format(@string/estimated_diameter_detail_description, asteroid.estimatedDiameter)}"
                    android:textColor="@color/default_text_color"
                    app:kmUnitText="@{asteroid.estimatedDiameter}"
                    tools:text="0.82 km" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/relative_velocity_title"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/relative_velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@{String.format(@string/relative_velocity_detail_description, asteroid.relativeVelocity)}"
                    android:textColor="@color/default_text_color"
                    app:velocityText="@{asteroid.relativeVelocity}"
                    tools:text="11.9 km/s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/distance_from_earth_title"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@{String.format(@string/distance_from_earth_detail_description, asteroid.distanceFromEarth)}"
                    android:textColor="@color/default_text_color"
                    app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                    tools:text="0.0924 au" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>